Add basic structure to page.

--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -8,6 +8,27 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+   <div class="container">
+       <div class="player">
+           <h2>Player Score</h2>
+           <div class="score">
+           </div>
+       </div>
+       <div class="result">
+           <h2>Result</h2>
+            <div class="score">
+            </div>
+       </div>
+       <div class="computer">
+           <h2>Computer Score</h2>
+           <div class="score">
+           </div>
+       </div>
+   </div>
+   <div class="container">
+       <button id="rock_btn">Rock</button>
+       <button id="paper_btn">Paper</button>
+       <button id="scissors_btn">Scissors</button>
+   </div>
 </body>
 </html>
