--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-   <div class="container">
-       <div class="player">
-           <h2>Player Score</h2>
+   <div class="score_container">
+       <div class="result">
+           <h2>Player</h2>
            <div class="score">
            </div>
        </div>
@@ -19,16 +20,16 @@
             <div class="score">
             </div>
        </div>
-       <div class="computer">
-           <h2>Computer Score</h2>
+       <div class="result">
+           <h2>Computer</h2>
            <div class="score">
            </div>
        </div>
    </div>
-   <div class="container">
-       <button id="rock_btn">Rock</button>
-       <button id="paper_btn">Paper</button>
-       <button id="scissors_btn">Scissors</button>
+   <div class="btn_container">
+       <button id="rock_btn" class="btn">Rock</button>
+       <button id="paper_btn" class="btn">Paper</button>
+       <button id="scissors_btn" class="btn">Scissors</button>
    </div>
 </body>
 </html>
