--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -9,27 +9,30 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-   <div class="score_container">
-       <div class="player">
-           <h2>Player</h2>
-           <div class="score">
-           </div>
-       </div>
-       <div class="result">
-           <h2>Result</h2>
+    <div class="score_container">
+        <div class="player">
+            <h2>Player</h2>
             <div class="score">
+                <h3 id="playerScore">0</h3>
             </div>
-       </div>
-       <div class="computer">
-           <h2>Computer</h2>
-           <div class="score">
-           </div>
-       </div>
-   </div>
-   <div class="btn_container">
-       <button id="rock_btn" class="btn" value="rock">Rock</button>
-       <button id="paper_btn" class="btn" value="paper">Paper</button>
-       <button id="scissors_btn" class="btn" value="scissors">Scissors</button>
-   </div>
+        </div>
+        <div class="result">
+            <h2>Result</h2>
+                <div class="score">
+                    <h3 id="resultText"></h3>
+                </div>
+        </div>
+        <div class="computer">
+            <h2>Computer</h2>
+            <div class="score">
+                <h3 id="computerScore">0</h3>
+            </div>
+        </div>
+    </div>
+    <div class="btn_container">
+        <button id="rock_btn" class="btn" value="rock">Rock</button>
+        <button id="paper_btn" class="btn" value="paper">Paper</button>
+        <button id="scissors_btn" class="btn" value="scissors">Scissors</button>
+    </div>
 </body>
 </html>
