--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -9,23 +9,27 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="round_container">
+        <h3 id="round_display"></h3>
+        <h3 id="game_result"></h3>
+    </div>
     <div class="score_container">
         <div class="player">
             <h2>Player</h2>
             <div class="score">
-                <h3 id="playerScore">0</h3>
+                <h3 id="player_score">0</h3>
             </div>
         </div>
         <div class="result">
             <h2>Result</h2>
                 <div class="score">
-                    <h3 id="resultText"></h3>
+                    <h3 id="result_text"></h3>
                 </div>
         </div>
         <div class="computer">
             <h2>Computer</h2>
             <div class="score">
-                <h3 id="computerScore">0</h3>
+                <h3 id="computer_score">0</h3>
             </div>
         </div>
     </div>
